@startuml

title __DATASTORE's Class Diagram__\n

  namespace com.author.kurtkalwin.datastore {
    class com.author.kurtkalwin.datastore.FileStoreManager {
        - dataStorePath : String
        - dataStoreSize : int
        + FileStoreManager()
        + checkIfKeyExists()
        + deleteKey()
        + getDataStorePath()
        + getDataStoreSize()
        + readFromDataStore()
        + writeToDataStore()
        - acquireFileLock()
        - checkDataStoreSize()
        - createKeyStore()
        - createLocalStore()
        - setupDataStore()
    }
  }
  

  namespace com.author.kurtkalwin.datastore {
    class com.author.kurtkalwin.datastore.LocalStore {
        {static} - DEFAULT_MAX_DATASTORE_SIZE : int
        {static} - EVICTION_PERIOD : int
        {static} - MAX_JSON_OBJECT_SIZE : int
        {static} - MAX_KEY_CHARS : int
        + LocalStore()
        + LocalStore()
        + LocalStore()
        + create()
        + create()
        + delete()
        + getDataStorePath()
        + read()
        - startTTLEvictionService()
        - validateKeyAndValue()
        - validateSizeofJsonObject()
    }
  }
  

  namespace com.author.kurtkalwin.datastore {
    class com.author.kurtkalwin.datastore.TTLEvictionService {
        - evictionMap : ConcurrentHashMap<String, Integer>
        + TTLEvictionService()
        + getEvictionMap()
        + run()
        - shouldEvictKey()
    }
  }
  

  com.author.kurtkalwin.datastore.LocalStore .up.|> com.author.kurtkalwin.datastore.Interfaces.KeyValueStore
  com.author.kurtkalwin.datastore.LocalStore o-- com.author.kurtkalwin.datastore.FileStoreManager : fileStoreManager
  com.author.kurtkalwin.datastore.LocalStore o-- com.author.kurtkalwin.datastore.TTLEvictionService : ttlEvictionService
  com.author.kurtkalwin.datastore.TTLEvictionService -up-|> java.util.TimerTask
  com.author.kurtkalwin.datastore.TTLEvictionService o-- com.author.kurtkalwin.datastore.FileStoreManager : fileStoreManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
